k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-webapp
  annotations: 
       nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: go-webapp.local #this host is not in use
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: go-webapp
            port:
              number: 80
